--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:server": "vite build --outDir dist/server --ssr src/entry-server.js"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "react": "^18.2.0",
