--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "postcss-normalize": "^10.0.1",
     "vite": "^4.2.0"
   },
-  "browserslist": "last 2 versions"
+  "browserslist": "last 3 versions"
 }
