--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "boussole",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.1",
   "type": "module",
+  "browserslist": "last 2 versions",
   "scripts": {
     "dev": "node server",
     "build:client": "vite build --outDir dist/client",
@@ -24,6 +25,5 @@
     "@vitejs/plugin-react-swc": "^3.0.0",
     "postcss-normalize": "^10.0.1",
     "vite": "^4.2.0"
-  },
-  "browserslist": "last 3 versions"
+  }
 }
