--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:server": "vite build --outDir dist/server --ssr src/entry-server.js"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.5",
     "axios": "^1.3.4",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
