--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "boussole",
   "private": true,
-  "version": "1.1.0",
+  "version": "1.2.0",
   "type": "module",
   "browserslist": "last 2 versions",
   "scripts": {
@@ -18,6 +18,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9"
   },
